# mips_rust

./: Cargo.toml  gdb_script  linker.ld
.cargo/: config.toml
src/: entry.asm  led.rs  main.rs  mem.rs
src/hal/: digital.rs  mod.rs
