[package]
name = "mips_rust"
version = "0.1.0"
authors = ["retrhelo <artyomliu@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
embedded-hal = { version = "0.2.4", features = ["unproven"]}
volatile-register = "*"
